refactor(core): allow access to NamespaceFiles through RunContext
Changes:
* add new Namespace and NamespaceFile class
* add new methods Storage#namespace and Storage#namesapce(string)
* add new utility class PathMatcherPredicate
* Deprecate for removal NamespaceFilesService